index.css
/* ============================================  VARIABLES ============================================ */
:root {
  --bright-pink: #f2388f;
  --light-pink: #d96aa7;
  --blue: #2173a6;
  --dark-blue: #013440;
  --bright-blue: #52e2f2;
}

/* ============================================  FONT FACES ============================================ */

@font-face {
  font-family: "diceyregular";
  src: url("assets/dicey-webfont.woff2") format("woff2"),
    url("assets/dicey-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

/* ============================================  NORMALIZE AND SET BASE FONT SIZE ============================================ */

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

/* ============================================  CLASSES ============================================ */

.active {
  height: 5.1rem;
  width: 5.1rem;
}

button {
  background: var(--blue);
  border: 5px solid var(--bright-blue);
  border-image: linear-gradient(221deg, var(--dark-blue), var(--bright-blue)) 1
    stretch;
  border-radius: 10px;
  color: var(--bright-blue);
  font-size: 1rem;
  margin: auto;
  padding: 0.75rem 1.75rem;
  transition: 200ms ease-in-out;
  box-sizing: content-box;
}

button:hover,
button:focus {
  background: var(--bright-blue);
  color: var(--blue);
  transform: scale(1.05);
}

.column {
  margin: 0rem 0rem 4rem 0rem;
  max-width: max-content;
}

.dice-1,
.dice-2 {
  background-color: var(--bright-pink);
  border-radius: 25px;
  border-radius: 29px;
  box-shadow: inset 18px 18px 25px #f7a8cd, inset -18px -18px 25px #b62367;
  color: var(--dark-blue);
  font-family: diceyregular;
  font-size: 2.5rem;
  height: 5rem;
  left: 0;
  padding: 1rem;
  text-align: center;
  top: 0;
  width: 5rem;
}

.dice-animation {
  animation: rolldice 3s forwards ease-out;
}

.dice-container {
  align-content: space-around;
  display: flex;
  flex-direction: row;
  gap: 2rem;
  justify-content: center;
}

.dice-parent {
  animation: bounce 400ms forwards ease-out;
  transform-origin: center center;
  transform-style: preserve-3D;
}

.master-container {
  background-color: var(--dark-blue);
  padding: 4rem 1rem;
  min-height: 100vh;
  border-width: calc(20vw-2rem);
  border-color: white;
  border-style: solid;
  box-sizing: border-box;
}

main {
  align-content: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.message {
  background-color: var(--blue);
  border-radius: 5px 45px 5px 45px;
  color: var(--bright-blue);
  max-width: 15vw;
  margin: auto auto 4rem auto;
  padding: 1rem 1.5rem;
  text-align: center;
  border: 10px solid var(--bright-blue);
  text-transform: uppercase;
}

.score {
  color: var(--bright-blue);
  margin: 0rem;
  font-size: 20px;
}

p.score {
  display: flex;
  flex-direction: column;
  width: 100%;
}

span.score {
  font-size: 3.75rem;
  color: var(--bright-blue);
  padding: 1.25rem;
}

.title {
  color: var(--light-pink);
  font-family: "Rubik Puddles", cursive;
  font-size: 4rem;
  margin: 0rem auto 2rem auto;
  text-align: center;
}

.title-container {
  margin: 0rem 0rem 0rem 0rem;
}

.wobble {
  animation: wobble 500ms forwards linear;
  animation-iteration-count: 12;
  background-color: var(--light-pink);
  color: var(--dark-blue);
  border: 10px solid white;
}

/* ==========================================  MEDIA QUERIES  ========================================== */

@media only screen and (min-device-width: 400px) and (max-device-width: 800px) and (-webkit-min-device-pixel-ratio: 1.5) and (orientation: landscape) {
  button {
    background: var(--bright-blue);
    border: 5px solid var(--blue);
    border-radius: 25px;
    color: var(--dark-blue);
    font-size: 1rem;
    margin: auto;
    padding: 0.75rem 1.75rem;
  }

  .column {
    margin: 0rem 0rem 3rem 0rem;
    max-width: max-content;
  }

  .dice-1,
  .dice-2 {
    background-color: var(--bright-pink);
    border-radius: 25px;
    border-radius: 15px;
    box-shadow: inset 18px 18px 25px #f7a8cd, inset -18px -18px 25px #b62367;
    color: var(--dark-blue);
    font-family: diceyregular;
    font-size: 2.2rem;
    height: 2rem;
    left: 0;
    padding: 2rem;
    text-align: center;
    top: 0;
    width: 2rem;
    transform: translate(10px, 10px);
  }

  html {
    font-size: 12px;
  }

  .message {
    background-color: var(--blue);
    border-radius: 5px 45px 5px 45px;
    color: var(--bright-blue);
    max-width: 30vw;
    margin: auto;
    padding: 1rem 3rem;
    text-align: center;
    border: 5px solid var(--bright-blue);
    text-transform: uppercase;
  }
}

@media only screen and (min-device-width: 200px) and (max-device-width: 400px) and (orientation: portrait) {
  .title {
    color: var(--light-pink);
    font-family: "Rubik Puddles", cursive;
    font-size: 4rem;
    margin: 0rem auto 2rem auto;
    text-align: center;
  }

  .message {
    background-color: var(--blue);
    border-radius: 5px 45px 5px 45px;
    color: var(--bright-blue);
    max-width: 30vw;
    margin: auto auto 2rem auto;
    padding: 1rem 1.5rem;
    text-align: center;
    border: 10px solid var(--bright-blue);
    text-transform: uppercase;
  }

  .column {
    margin: 0rem 0rem 3rem 0rem;
    max-width: max-content;
  }

  .score {
    color: var(--bright-blue);
    margin: 0rem;
    font-size: 20px;
  }
}

@media only screen and (min-device-width: 200px) and (max-device-width: 860px) and (orientation: landscape) {
  .master-container {
    background-color: var(--dark-blue);
    padding: 3rem;
    min-height: 100vh;
  }

  .column {
    margin: 0rem 0rem 3rem 0rem;
    max-width: max-content;
  }

  .dice-container {
    align-content: space-around;
    display: flex;
    flex-direction: row;
    gap: 2rem;
    justify-content: revert;
    margin-bottom: 0px;
  }

  .score {
    color: var(--bright-blue);
    margin: 0rem;
    font-size: 20px;
  }

  .message {
    margin: auto;
  }

  main {
    align-content: center;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-flow: wrap;
  }
}

@media screen and (min-width: 800px) {
  .title {
    font-size: 8rem;
  }
}

/* ============================================  ANIMATIONS ============================================ */

@keyframes rolldice {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(1080deg);
  }
}

@keyframes bounce {
  0% {
    transform: translateY(-100%) translateX(-100%);
  }

  12.5% {
    transform: translateY(-50%) translateX(-50%);
  }

  25% {
    transform: translateY(-25%) translateX(-25%);
  }

  40% {
    transform: translateY(0%) translateX(0%);
  }

  50% {
    transform: translateY(25%) translateX(-25%);
  }

  60% {
    transform: translateY(50%) translateX(-50%);
  }

  70% {
    transform: translateY(25%) translateX(-25%);
  }

  80% {
    transform: translateY(15%) translateX(-15%);
  }

  80% {
    transform: translateY(5%) translateX(-5%);
  }

  100% {
    transform: translateY(0%) translateX(0%);
  }
}

@keyframes wobble {
  0% {
    transform: rotate(0deg);
  }

  25% {
    transform: rotate(5deg);
  }

  50% {
    transform: rotate(0deg);
  }

  75% {
    transform: rotate(-5deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

